// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success render with json render a array type of json 1`] = `
Array [
  <div
    style={
      Object {
        "left": 20,
      }
    }
  />,
  <div
    style={
      Object {
        "left": 50,
      }
    }
  />,
]
`;

exports[`success render with json render div success 1`] = `
<div
  style={
    Object {
      "left": 20,
    }
  }
/>
`;
